--- a/package.json
+++ b/package.json
@@ -6,22 +6,33 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "typegen": "sanity schema extract && sanity schema generate"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.2.4",
+    "@sanity/client": "^6.4.12",
+    "@sanity/image-url": "^1.0.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.556.0",
+    "next": "13.5.11",
+    "next-sanity": "^5.5.3",
     "react": "^18",
     "react-dom": "^18",
-    "next": "13.5.11"
+    "tailwind-merge": "^3.4.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10",
-    "postcss": "^8",
-    "tailwindcss": "^3",
     "eslint": "^8",
-    "eslint-config-next": "13.5.11"
+    "eslint-config-next": "13.5.11",
+    "postcss": "^8",
+    "sanity": "^3.0.0",
+    "tailwindcss": "^3",
+    "typescript": "^5"
   }
 }
