--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.556.0",
+    "motion": "^12.23.26",
     "next": "13.5.11",
     "next-sanity": "^5.5.3",
+    "next-themes": "^0.4.6",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^3.4.0",
