--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "typegen": "sanity schema extract && sanity schema generate"
   },
   "dependencies": {
+    "@portabletext/react": "^6.0.0",
     "@radix-ui/react-slot": "^1.2.4",
     "@sanity/client": "^6.4.12",
     "@sanity/image-url": "^1.0.2",
