--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "typegen": "sanity schema extract && sanity schema generate"
+    "typegen": "sanity schema extract && sanity typegen generate"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.36.2",
+    "@openai/chatkit-react": "^1.3.0",
     "@portabletext/react": "^6.0.0",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-separator": "^1.1.8",
